# bbAPI

./: .dockerignore  .gitignore  BILLING_INTEGRATION.md  CMakeLists.txt  Dockerfile  ENFORCEMENT_RULES.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROGRESS.md  README_BILLING.md  README_BUILD.md  README_DOCKER.md  README_ENV.md  SYSTEM_OPERATIONAL.md  build_arm64.sh  build_debug.sh  config.env  deploy_to_ecr.sh  env.template  setup-env.sh  start-tapi.sh  tAPI  test_integration.sh  test_simple
docs/: API_REFERENCE.md  adding_new_components.md  camera_component_refactor.md  logger_usage.md
include/: api.h  base64.h  camera.h  camera_manager.h  component.h  component_factory.h  config_manager.h  global_config.h  license.h  logger.h  onvif_discovery.h
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  STrack.h  lapjv.h
include/billing/: billing_client.h  billing_config.h  entitlement_manager.h  license_validator.h  repository.h  usage_tracker.h
include/bytetrack/: BYTETracker.h  STrack.h  kalmanFilter.h
include/components/: annotated_stream.h  camera_source.h  event_alarm.h  motion_detector.h  mqtt_telemetry.h  object_detector.h  object_tracker.h  telemetry.h
include/components/processor/: age_gender_detection_processor.h  line_zone_manager.h  object_classification_processor.h  object_detector_processor.h  object_tracker_processor.h  polygon_zone_manager.h  zone_timer.h
include/components/sink/: database_sink.h  file_sink.h
include/components/source/: gstreamer_source.h
include/database/: postgres_connection.h  redis_cache.h
include/geometry/: line_zone.h  polygon_zone.h
include/utils/: cencode.h  common.h  grpc_client.h  http_client.h  shm_utils.h  simple_grpc_client.h  url_utils.h
scripts/: build.sh  download_models.sh  init-postgres.sql  install_deps.sh  install_system_deps.sh  integration_test.sh  license_test.sh  run_license_tests.sh  test_config.sh  test_connection.sh  test_detect.sh  test_object_detection.sh  triton_integration_test_fixed.sh
scripts/migrations/: 001_initial_schema.sql  002_billing_schema.sql
src/: api.cpp  background_task_manager.cpp  camera.cpp  camera_license_manager.cpp  camera_manager.cpp  component.cpp  component_factory.cpp  config_manager.cpp  global_config.cpp  license.cpp  main.cpp
src/ByteTracker/: BYTETracker.cpp  KalmanFilter.cpp  Object.cpp  Rect.cpp  STrack.cpp  lapjv.cpp
src/billing/: billing_client.cpp  billing_config.cpp  entitlement_manager.cpp  license_validator.cpp  repository.cpp  usage_tracker.cpp
src/bytetrack/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
src/components/processor/: age_gender_detection_processor.cpp  line_zone.cpp  line_zone_manager.cpp  object_classification_processor.cpp  object_detector_processor.cpp  object_tracker_processor.cpp  polygon_zone_manager.cpp  zone_timer.cpp
src/components/sink/: database_sink.cpp  file_sink.cpp
src/components/source/: gstreamer_source.cpp
src/database/: postgres_connection.cpp  redis_cache.cpp
src/geometry/: line_zone.cpp  polygon_zone.cpp
src/utilities/: logger.cpp  onvif_discovery.cpp
src/utils/: cencode.cpp  common.cpp  grpc_client.cpp  http_client.cpp  shm_utils.cc  simple_grpc_client.cpp  url_utils.cpp
